tests/baselines/reference/commaOperatorWithoutOperand.errors.txt
==== tests/cases/compiler/commaOperatorWithoutOperand.ts (12 errors) ====
    var ANY: any;
    var BOOLEAN: boolean;
    var NUMBER: number;
    var STRING: string;
    var OBJECT: Object;
    
    // Expect to have compiler errors
    // Missing the second operand
    (ANY, );
          ~
!!! error TS1003: Identifier expected.
    (BOOLEAN, );
              ~
!!! error TS1003: Identifier expected.
    (NUMBER, );
             ~
!!! error TS1003: Identifier expected.
    (STRING, );
             ~
!!! error TS1003: Identifier expected.
    (OBJECT, );
             ~
!!! error TS1003: Identifier expected.
    
    // Missing the first operand
    (, ANY);
     ~
!!! error TS1003: Identifier expected.
    (, BOOLEAN);
     ~
!!! error TS1003: Identifier expected.
    (, NUMBER);
     ~
!!! error TS1003: Identifier expected.
    (, STRING);
     ~
!!! error TS1003: Identifier expected.
    (, OBJECT);
     ~
!!! error TS1003: Identifier expected.
    
    // Missing all operands
    ( , );
      ~
!!! error TS1003: Identifier expected.
        ~
!!! error TS1003: Identifier expected.